fix(recon): 纳入拒绝取消终态并约束原关窗证明